# rag-project

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
configs/: default.yaml
notebooks/: 01_ingest.ipynb  02_embed.ipynb  03_rag_pipeline_2.ipynb
scripts/: ingest_docs.py  query.py
src/rag/: __init__.py  config.py  embeddings.py  ingest.py  llm.py  pipeline.py  prompts.py  reranker.py  retriever.py  vectorstore.py
src/rag/app/: __init__.py  main.py
src/rag/cli/: ingest.py  query.py
tests/: conftest.py  test_ingest.py  test_llm.py  test_pipeline.py  test_prompts.py  test_retriever.py
